# perconet

./: .gitignore  .readthedocs.yaml  DFS_cycle_finder.py  README.md  README.rst  class layout.py  class_dfs.py  cluster_find3d.py  dropped_list_test.py  import_files.py  import_files_old.py  import_reversible.py  import_snapshot.py  percolation_3D.py  percolation_main.py  pyproject.toml  reversible_bonds.py  todo
.github/workflows/: test.yaml
docs/: percolation_overview1.pptx
docs/source/: conf.py  example.rst  field_specific.rst  index.rst  installing.rst  license.rst  perconet.rst  why_loopfinding.rst
examples/: simple.py
perconet/: __init__.py  class_dfs.py  loopfinder.py  looptools.py  periodicnetwork.py
tests/: dropped_list_test.py  networkdata_testing.py  pn_test_helpers.py  test_loopfinder.py  test_sampledata.py  test_simpleexample.py  test_versionconsistent.py
